# offline_meeting_note_taker_agent

./: .gitignore  README.md  architecture_v2.md  audit-log.md  audit-report-2026-07.md  claude_cli_implement_v2.md  pyproject.toml
agent/: loop.py  mcp_client.py  protocol.py  trace.py
agent/prompts/: system_prompt.md
audio_capture/: device_probe.py  session_buffer.py  sources.py
cli/: app_launcher.py  briefing.py  calendar_matcher.py  capability.py  doc_ingest.py  docx_export.py  feedback.py  git_backup.py  mail_import.py  mail_sync.py  main.py  project_apply.py  reminders.py  review_apply.py  search.py  semantic_search.py  teams_sync.py  vault_export.py  web.py  weekly_summary.py
concurrency/: atomic.py  lock.py
config/: loader.py  settings.toml
deploy/: Dockerfile.app  README.md  docker-compose.yml  settings.container.toml
docs/: architecture.md  architecture_v2.md  claude_cli_bugfix_01.md  claude_cli_bugfix_02.md  claude_cli_bugfix_03.md  claude_cli_bugfix_04.md  claude_cli_implement_v2.md  code_review_2026_07_01.md  fable_audit_report.md  feature-proposal-2026-07.md  mcp-tool-reference.md  runbook.md  setup-guide.md  todo-system-research-2026-07.md  ui_test_plan.md
llm/: client.py  http_probe.py  model_profiles.py  server_manager.py
mcp_server/: meeting_type.py  mom_writer.py  project.py  quality_gate.py  schemas.py  server.py  state.py  todo.py
mcp_server/tools/: blocker_escalation.py  extraction.py  loop_closure.py  recording.py  review.py  transcription.py
scripts/: bench_pipeline.py  gpu_check.py  install_app.ps1  network_audit.py
static/: app.js  index.css  index.html
tests/agent/: fakes.py  test_loop.py  test_mcp_client_integration.py  test_protocol.py  test_trace.py
tests/audio_capture/: fakes.py  test_device_probe.py  test_session_buffer.py  test_sources.py
tests/cli/: test_app_launcher.py  test_briefing.py  test_capability.py  test_context_endpoints.py  test_doc_ingest.py  test_docx_export.py  test_feedback.py  test_git_backup.py  test_live_transcription_window.py  test_mail_import.py  test_mail_sync.py  test_meeting_detail.py  test_project_apply.py  test_project_endpoints.py  test_reindex_cli.py  test_resume.py  test_review_apply.py  test_search.py  test_semantic_search.py  test_settings_endpoint.py  test_task_endpoints.py  test_teams_sync.py  test_vault_export.py  test_web.py  test_weekly_summary.py
tests/concurrency/: test_lock.py
tests/config/: test_loader.py
tests/faults/: test_fault_injection.py
transcribe/: chunker.py  diarisation.py  import_parsers.py  postprocess.py  whisper_runner.py
(+21 files in other folders)
