[project]
name = "meeting-agent"
version = "0.1.0"
description = "Offline personal meeting agent: transcription, action-item extraction, and supervised todo/project tracking. Runs entirely on-device."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psutil>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "pyaudiowpatch>=0.2; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
    "watchdog>=4.0",
    "mcp>=1.2",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "nvidia-cublas-cu12; sys_platform == 'win32'",
    "nvidia-cudnn-cu12; sys_platform == 'win32'",
]

[project.optional-dependencies]
diarisation = ["pyannote.audio>=3.3"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
meeting-agent = "cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "audio_capture", "cli", "concurrency", "config", "llm", "mcp_server", "transcribe"]
