[project]
name = "meeting-agent"
version = "0.1.0"
description = "Offline personal meeting agent: transcription, action-item extraction, and supervised todo/project tracking. Runs entirely on-device."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psutil>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "pyaudiowpatch>=0.2; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
    "watchdog>=4.0",
    "mcp>=1.2",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "nvidia-cublas-cu12; sys_platform == 'win32'",
    "nvidia-cudnn-cu12; sys_platform == 'win32'",
    "pdfplumber>=0.10",
    "python-pptx>=0.6",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "rank-bm25>=0.2",
    "winotify>=1.1; sys_platform == 'win32'",
    "portalocker>=2.7",
    "sse-starlette>=1.6",
]

[project.optional-dependencies]
diarisation = ["pyannote.audio>=3.3"]
semantic-search = ["fastembed>=0.3", "sqlite-vec>=0.1.6"]
mail-msg = ["extract-msg>=0.45"]
app = ["pystray>=0.19", "Pillow>=10.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.100"]

[project.scripts]
meeting-agent = "cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "audio_capture", "cli", "concurrency", "config", "llm", "mcp_server", "mcp_server/tools", "transcribe", "scripts"]
